# openroad-mcp

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  2025-12-09 00-27-52.mkv  2025-12-09_00-28-07_complete.srt  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  GSOC_PROPOSAL_DRAFT.md  LICENSE  Makefile  PHASE1_TODO.md  QUICKSTART.md  README.md  REFACTOR_PROGRESSIVE_DISCLOSURE.md  ROADMAP.md  TICKET-011-ASSESSMENT-SUMMARY.md  TIMING_TODO.md  claude_code_server.py  install_openroad.sh  main.py  mcp.json  mcp.md  opencode.json  or-plan.md  orfs-plan.md  pyproject.toml  requirements-test.txt  requirements.txt  run_gcd_test.py  server.json
.claude/: settings.json
.claude/skills/release/: SKILL.md
.copilot/: settings.json
.cursor/: mcp.json
.devcontainer/: Dockerfile  init-firewall.sh
.gemini/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/scripts/: generate_changelog_section.py  update_changelog.py
.github/workflows/: auto-tag.yml  ci.yaml  claude.yaml  cross-platform.yml  docker-publish.yml  mcp-cli-test.yml  prepare-release.yml  release.yml  ts-ci.yml  update-error-patterns.yml
.kilocode/: mcp.json
.roo/: mcp.json
benchmark/: QUICKSTART.md  README.md  evaluate.py  example_results.json  openroad_mcp_benchmark.json  run_benchmark.py
benchmarks/: __init__.py
benchmarks/cache_hit_rate/: __init__.py  fixture.py
benchmarks/cache_hit_rate/conditions/: __init__.py  base.py  baseline_condition.py  mcp_condition.py
claude_export_2025-11-21_12-09-12_060f3873/: conversation_full.md  conversation_full.xml  raw_messages.jsonl  session_info.json  summary.txt
core/: config.py  logging_config.py
demo/: export_claude_session.py
demo/fsic2026/: FSiC2026_OpenROAD_MCP_Abstract.md  FSiC2026_OpenROAD_MCP_Script.txt  slides.html
demo/optimisation-flow/: README.md
demo/optimisation-flow/config/: constraint_starter.sdc
demo/orfs-gcd-timing/: DEMO_TRANSCRIPT_PLAN.md  ENGINEERING_DEMO_RESULTS.md  OPTIMIZATION_RESULTS_COMPARISON.md  README.md  run_demo.py  setup.sh
demo/orfs-gcd-timing/configs/: aggressive_clock_constraints.sdc  datapath_focused_constraints.sdc  extreme_pressure_constraints.sdc  improved_timing.sdc  io_constrained_constraints.sdc  mild_clock_constraints.sdc  mixed_violations_constraints.sdc  relaxed_constraints.sdc  (+1 more)
demo/video_gen/: __init__.py  burn_subtitles.py  generate_subtitles_chunked.py
docs/: CROSS_PLATFORM.md  MCP_CLI_TESTING.md  MIGRATION_PLAN.md  ROADMAP.md  agent-orchestration.md
plans/: README.md
presentation/: FSiC2026_OpenROAD_MCP_Abstract.md  FSiC2026_OpenROAD_MCP_Script.txt  slides.html
scripts/: gcd_timing_test.tcl  setup-macos.sh  setup-ubuntu.sh  setup-wsl2.ps1  test-mcp-integration.sh  update_error_patterns.py
src/openroad_mcp/: __init__.py  main.py  server.py
tests/: __init__.py  test_checkpoint.py  test_gcd_mcp_integration.py  test_gcd_timing.py  test_interactive_pty.py  test_interactive_session.py
tests/cli/: __init__.py  conftest.py  test_cli.py
tests/code_mode/: __init__.py  test_executor.py  test_registry.py  test_sandbox.py  test_tools.py
tests/e2e/: test_mcp_inspector.py
tests/integration/: __init__.py  conftest.py  test_execute_command.py  test_gui.py  test_non_interactive_timing_workflows.py  test_orfs_flows.py  test_pty_integration.py  test_timing_workflows.py
tests/interactive/: __init__.py  conftest.py  test_command_validation.py  test_interactive_buffer.py  test_interactive_pty.py  test_interactive_session.py  test_session_manager.py
tests/mcp-integration/: __init__.py  run_tests.py  test_cases.json
tests/performance/: __init__.py  conftest.py  test_benchmarks.py  test_latency.py  test_mcp_quality.py  test_memory_monitoring.py  test_response_sizes.py  test_scalability.py
tests/timing/: __init__.py  test_integration.py  test_parsers.py  test_session.py
tests/tools/: test_command_whitelist.py  test_gui_tool.py  test_interactive_tools.py  test_report_images.py  test_unicode_fix.py
tests/utils/: test_path_security.py
tickets/: README.md  TICKET-001-delta-checkpoint-system.md  TICKET-002-spatial-indexing.md  TICKET-003-streaming-query-engine.md  TICKET-004-multi-tier-caching.md  ticket-list.md
typescript/: eslint.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
typescript/__tests__/: constants.test.ts
typescript/scripts/: integration_check.ts
typescript/src/: constants.ts  exceptions.ts
(+65 files in other folders)
