[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openroad-mcp"
version = "0.1.0"
authors = [
    {name = "Precision Innovations", email="jluar@precisioninno.com"},
]
description = "The OpenROAD MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.6",
    "mcp[cli]>=1.12.1",
    "pillow>=11.0.0",
    "psutil>=7.1.0",
    "pydantic>=2.11.7",
]

[project.scripts]
openroad-mcp = "openroad_mcp.main:main"

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.14.2",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.12.5",
    "types-psutil>=7.0.0.20250822",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
exclude = "tests/"
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["fastmcp.*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
