[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openroad-mcp"
version = "0.4.2"
authors = [
    {name = "Precision Innovations", email="jluar@precisioninno.com"},
]
description = "The OpenROAD MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp==3.2.0",
    "mcp[cli]==1.26.0",
    "pillow==12.2.0",
    "psutil==7.2.2",
    "pydantic==2.12.5",
]

[project.scripts]
openroad-mcp = "openroad_mcp.main:main"

[project.optional-dependencies]
dev = [
    "google-genai==1.69.0",
    "mypy==1.20.0",
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.8",
    "types-psutil==7.2.2.20260130",
]

[tool.mypy]
exclude = "tests/"
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["fastmcp.*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
